--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@tanstack/react-router": "^1.144.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "2.3.11"
   }
 }
